fibocom: ignore intel trace port in the L850-GL

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -991,6 +991,8 @@ libmm_plugin_quectel_la_LDFLAGS  = $(PLUGIN_COMMON_LINKER_FLAGS)
 # plugin: fibocom
 ################################################################################
 
+dist_udevrules_DATA += fibocom/77-mm-fibocom-port-types.rules
+
 pkglib_LTLIBRARIES += libmm-plugin-fibocom.la
 libmm_plugin_fibocom_la_SOURCES = \
 	fibocom/mm-plugin-fibocom.c \
