libmm-glib: add MMPco for handling raw PCO data

--- a/libmm-glib/Makefile.am
+++ b/libmm-glib/Makefile.am
@@ -83,6 +83,8 @@ libmm_glib_la_SOURCES = \
 	mm-signal.c \
 	mm-kernel-event-properties.h \
 	mm-kernel-event-properties.c \
+	mm-pco.h \
+	mm-pco.c \
 	$(NULL)
 
 libmm_glib_la_CPPFLAGS = \
@@ -152,6 +154,7 @@ include_HEADERS = \
 	mm-cdma-manual-activation-properties.h \
 	mm-signal.h \
 	mm-kernel-event-properties.h \
+	mm-pco.h \
 	$(NULL)
 
 CLEANFILES =
