cli: allow multiple output format types
In addition to the standard human-friendly output, we now allow a
machine-friendly key-value pair output, much easier to parse and use
by programs that look at the mmcli output.

This new key-value pair output should be treated as API from now on, so
third-party programs can assume the output is compatible from one
release to another.

--- a/cli/Makefile.am
+++ b/cli/Makefile.am
@@ -13,8 +13,8 @@ mmcli_CPPFLAGS = \
 mmcli_SOURCES = \
 	mmcli.h \
 	mmcli.c \
-	mmcli-common.h \
-	mmcli-common.c \
+	mmcli-common.h mmcli-common.c \
+	mmcli-output.h mmcli-output.c \
 	mmcli-manager.c \
 	mmcli-modem.c \
 	mmcli-modem-3gpp.c \
