dell: support XMM-based devices

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1046,9 +1046,22 @@ libmm_plugin_dell_la_SOURCES += \
 	$(NULL)
 endif
 
-libmm_plugin_dell_la_CPPFLAGS = $(PLUGIN_COMMON_COMPILER_FLAGS) $(NOVATEL_COMMON_COMPILER_FLAGS) $(SIERRA_COMMON_COMPILER_FLAGS) $(TELIT_COMMON_COMPILER_FLAGS) $(MBM_COMMON_COMPILER_FLAGS)
-libmm_plugin_dell_la_LDFLAGS  = $(PLUGIN_COMMON_LINKER_FLAGS)
-libmm_plugin_dell_la_LIBADD   = $(NOVATEL_COMMON_LIBADD_FLAGS) $(SIERRA_COMMON_LIBADD_FLAGS) $(TELIT_COMMON_LIBADD_FLAGS) $(MBM_COMMON_LIBADD_FLAGS)
+libmm_plugin_dell_la_CPPFLAGS = \
+	$(PLUGIN_COMMON_COMPILER_FLAGS) \
+	$(NOVATEL_COMMON_COMPILER_FLAGS) \
+	$(SIERRA_COMMON_COMPILER_FLAGS) \
+	$(TELIT_COMMON_COMPILER_FLAGS) \
+	$(XMM_COMMON_COMPILER_FLAGS) \
+	$(MBM_COMMON_COMPILER_FLAGS) \
+	$(NULL)
+libmm_plugin_dell_la_LDFLAGS = $(PLUGIN_COMMON_LINKER_FLAGS)
+libmm_plugin_dell_la_LIBADD = \
+	$(NOVATEL_COMMON_LIBADD_FLAGS) \
+	$(SIERRA_COMMON_LIBADD_FLAGS) \
+	$(TELIT_COMMON_LIBADD_FLAGS) \
+	$(XMM_COMMON_LIBADD_FLAGS) \
+	$(MBM_COMMON_LIBADD_FLAGS) \
+	$(NULL)
 
 dist_udevrules_DATA += dell/77-mm-dell-port-types.rules
 
