--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,28 +1,72 @@
 image: gcc
 
 stages:
-  - test
+  - build
 
 before_script:
-  - apt update && apt -y install autoconf automake libtool libgudev-1.0-dev libgettextpo-dev autopoint xsltproc dbus
-  - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-  - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
-  - pushd libmbim
-  - ./autogen.sh
-  - make
-  - make install
-  - popd
-  - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
-  - pushd libqmi
-  - ./autogen.sh
-  - make
-  - make install
-  - popd
+    - apt update
+    - apt -y install autoconf automake libtool libgudev-1.0-dev libgettextpo-dev autopoint xsltproc dbus
 
-test:
-  stage: test
+build-no-qmi:
+  stage: build
   script:
-    - ./autogen.sh
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
+    - pushd libmbim
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr
+    - make
+    - make install
+    - popd
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/tmp/build-no-qmi --disable-gtk-doc --without-qmi
+    - make
+    - make check
+    - make install
+
+build-no-mbim:
+  stage: build
+  script:
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - pushd libqmi
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr --disable-mbim-qmux
+    - make
+    - make install
+    - popd
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/tmp/build-no-mbim --disable-gtk-doc --without-mbim
+    - make
+    - make check
+    - make install
+
+build-no-qmi-no-mbim:
+  stage: build
+  script:
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/tmp/build-no-qmi-no-mbim --disable-gtk-doc --without-qmi --without-mbim
+    - make
+    - make check
+    - make install
+
+build-default:
+  stage: build
+  script:
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
+    - pushd libmbim
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr
+    - make
+    - make install
+    - popd
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - pushd libqmi
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr --enable-mbim-qmux
+    - make
+    - make install
+    - popd
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr --disable-gtk-doc
     - make
     - make check
     - make install
