iface-modem-location: define first and last location sources
Much clearer to understand when looping through them.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -267,6 +267,7 @@ CLEANFILES    += $(DAEMON_ENUMS_GENERATED)
 
 ModemManager_CPPFLAGS = \
 	-DPLUGINDIR=\"$(pkglibdir)\" \
+	-DMM_COMPILATION \
 	$(NULL)
 
 ModemManager_LDADD = \
