quectel: add port type hints for the Quectel LTE-A EG06
 ttyUSB0 (if #0): QCDM/DIAG port
 ttyUSB1 (if #1): GPS data port
 ttyUSB2 (if #2): AT primary port
 ttyUSB3 (if #3): AT secondary port

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1089,6 +1089,8 @@ AM_CFLAGS += \
 # plugin: quectel
 ################################################################################
 
+dist_udevrules_DATA += quectel/77-mm-quectel-port-types.rules
+
 pkglib_LTLIBRARIES += libmm-plugin-quectel.la
 libmm_plugin_quectel_la_SOURCES = \
 	quectel/mm-plugin-quectel.c \
