--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -92,6 +92,31 @@ mmsmspdu_LDADD = \
 	$(NULL)
 
 ################################################################################
+# mmsmsmonitor
+################################################################################
+
+noinst_PROGRAMS += mmsmsmonitor
+
+mmsmsmonitor_SOURCES = mmsmsmonitor.c
+
+mmsmsmonitor_CPPFLAGS = \
+	$(MM_CFLAGS) \
+	-I$(top_srcdir) \
+	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/include \
+	-I$(top_builddir)/include \
+	-I$(top_srcdir)/libmm-glib \
+	-I$(top_srcdir)/libmm-glib/generated \
+	-I$(top_builddir)/libmm-glib/generated
+	$(NULL)
+
+mmsmsmonitor_LDADD = \
+	$(MM_LIBS) \
+	$(top_builddir)/libmm-glib/libmm-glib.la \
+	$(top_builddir)/src/libhelpers.la \
+	$(NULL)
+
+################################################################################
 # mmcli-test-sms
 ################################################################################
 
