policy: USSD policy requires user authentication in strict mode
(cherry picked from commit 8a652179deb5d0e496dd084d0a18ac457c833f62)

--- a/data/org.freedesktop.ModemManager1.policy.in.in
+++ b/data/org.freedesktop.ModemManager1.policy.in.in
@@ -68,7 +68,7 @@
     <message>System policy prevents querying or utilizing network information and services.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
-      <allow_active>yes</allow_active>
+      <allow_active>@MM_DEFAULT_USER_POLICY@</allow_active>
     </defaults>
   </action>
 
