--- a/plugins/foxconn/mm-foxconn-t77w968-carrier-mapping.conf
+++ b/plugins/foxconn/mm-foxconn-t77w968-carrier-mapping.conf
@@ -1,13 +1,13 @@
 
 #
-# DW5821e carrier mapping table
+# T77W968 carrier mapping table
 #
 # This table maps the MCCMNC of the SIM card with the corresponding
 # configuration description as reported by the QMI PDC service in
 # this module.
 #
 
-[dell dw5821e]
+[foxconn t77w968]
 
 # AT&T
 302220=ATT
