plugin-manager: dynamically load 'shared' util libraries
(cherry picked from commit b1c3f1eb1c740975b3ea387ae5e08dc426643c8b)

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -37,6 +37,14 @@ AM_CFLAGS  += $(MBIM_CFLAGS)
 AM_LDFLAGS += $(MBIM_LIBS)
 endif
 
+# Common compiler/linker flags for shared utils
+SHARED_COMMON_COMPILER_FLAGS = \
+	$(NULL)
+SHARED_COMMON_LINKER_FLAGS = \
+	-module        \
+	-avoid-version \
+	$(NULL)
+
 # Common compiler/linker flags for plugins
 PLUGIN_COMMON_COMPILER_FLAGS = \
 	$(NULL)
